<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Appearance"
        app:icon="@drawable/ic_settings_appearance">

        <SwitchPreferenceCompat
            app:key="dark_theme"
            app:title="@string/dark_theme" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Units"
        app:icon="@drawable/ic_cloud">

        <ListPreference
            app:defaultValue="celsius"
            app:entries="@array/temp_entries"
            app:entryValues="@array/temp_values"
            app:key="temperature"
            app:title="@string/temp_unit"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="ms"
            app:entries="@array/wind_speed_entries"
            app:entryValues="@array/wind_speed_values"
            app:key="wind_speed"
            app:title="@string/wind_speed_unit"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="mm"
            app:entries="@array/precipitation_entries"
            app:entryValues="@array/precipitation_values"
            app:key="precipitation"
            app:title="@string/precipitation_unit"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>