<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_settings.presenter.fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:text="@string/settings"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center"
                android:text="@string/dark_theme"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/swTheme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/settings"
                android:minWidth="52dp"
                android:minHeight="52dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tempUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:minHeight="48dp"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/temp_unit"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTempUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryTextColor"
                android:textSize="14sp"
                tools:text="@string/temp_unit"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/windSpeedUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:minHeight="48dp"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/wind_speed_unit"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvWindSpeedUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryTextColor"
                android:textSize="14sp"
                tools:text="@string/wind_speed_unit"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/precipitationUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:minHeight="48dp"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/precipitation_unit"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPrecipitationUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryTextColor"
                android:textSize="14sp"
                tools:text="@string/precipitation_unit" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>