<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_weather.presenter.fragment.WeatherFragment">

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/loading"
        android:textSize="21sp"
        android:textColor="@color/primaryTextColor"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nestedscrollview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibAdd"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/add"
                    android:src="@drawable/ic_add" />

                <TextView
                    android:id="@+id/tvCityName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="21sp"
                    tools:text="Ottawa" />

                <ImageButton
                    android:id="@+id/ibSettings"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/ic_settings" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llWeather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="16sp"
                    tools:text="2024-01-01 01:01" />

                <ImageView
                    android:id="@+id/imWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="128dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/weather"
                    tools:ignore="ImageContrastCheck"
                    tools:src="@drawable/ic_cloudy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:translationY="-32dp">

                    <TextView
                        android:id="@+id/tvTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="48sp"
                        tools:text="10" />

                    <TextView
                        android:id="@+id/tvTempUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="top"
                        android:textSize="21sp"
                        tools:text="°C" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:translationY="-28dp"
                    tools:text="Overcast" />

                <LinearLayout
                    android:id="@+id/llWeatherInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="4dp"
                    android:paddingVertical="8dp">

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/humidity"
                        android:drawablePadding="8dp"
                        android:textAlignment="textStart"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/ic_humidity"
                        tools:text="80%" />

                    <TextView
                        android:id="@+id/tvWindSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="18dp"
                        android:contentDescription="@string/wind_speed"
                        android:drawablePadding="8dp"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/ic_wind"
                        tools:text="3.0m/s" />

                    <TextView
                        android:id="@+id/tvPrecipitation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/pressure"
                        android:drawablePadding="8dp"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/ic_pressure"
                        tools:text="0.0inch" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvHourlyWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:elevation="0dp"
                    app:cardBackgroundColor="@color/secondaryBackground"
                    app:cardCornerRadius="8dp"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv7DayForecast"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="4dp"
                            android:text="@string/week_forecast"
                            android:textSize="18sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvDailyWeather"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>